changes layout index.js

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,7 @@
     border: none;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    min-width: 300px;
+    display: inline-block;
 }
 
